# dspy-redteam

./: AGENTS.md  README.md
redcell/: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json
redcell/.github/workflows/: ci.yml  deploy.yml
redcell/ci/dagger/: dagger.json  go.mod  main.go
redcell/docs/: CONTEXT.md  README.md  api-reference.md  authentication.md  dns-routing.md  failure-modes.md  quickstart.md
redcell/docs/adr/: 0001-rust-axum-pocket-id.md
redcell/docs/runbooks/: initial-setup.md
redcell/docs/superpowers/plans/: 2026-07-08-redcells-safe-target-onboarding-plan.md
redcell/docs/superpowers/specs/: 2026-07-08-redcells-safe-target-onboarding-design.md
redcell/migrations/: 001_initial.sql  002_add_job_queue_columns.sql  003_saas_schema.sql  004_oidc_auth.sql
redcell/pocket-id/: .env.example  .gitignore  README.md  fly.toml
redcell/pocket-id/dagger/: go.mod  go.sum  main.go
redcell/pocket-id/dagger/overlay/docker/: Dockerfile
redcell/pocket-id/dagger/overlay/frontend/static/: app.webmanifest
redcell/scripts/: deploy.sh
redcell/src/: api.rs  auth.rs  billing.rs  config.rs  credentials.rs  db.rs  error.rs  gate.rs  judge.rs  lib.rs  llm.rs  main.rs  models.rs  pipeline.rs  rate_limit.rs  redis.rs  validation.rs  worker.rs
redcell/src/web/: auth.rs  mod.rs  oidc.rs  routes.rs
redcell/static/: input.css  output.css
redcell/templates/: _layout.html  api_keys.html  api_keys_partial.html  billing.html  dashboard.html  docs.html  index.html  login.html  register.html  tos.html
redcell/tests/: integration.rs
(+12 files in other folders)
