[package]
name = "redcell"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0"
async-openai = "0.28"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
config = "0.15"

dotenvy = "0.15"
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
rand = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "migrate",
    "chrono",
    "uuid",
] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"

tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "request-id", "limit", "set-header", "normalize-path", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.16", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
askama = "0.14.0"
tower-sessions = "0.15.0"
aes-gcm = { version = "0.11.0", features = ["aes", "rand_core"] }
time = "0.3.45"
hex = "0.4.3"
jwiesler-async-stripe = { version = "0.34.3", features = ["checkout", "billing", "webhook-events", "runtime-tokio-hyper-rustls"] }
rand_core = "0.10.1"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.13.4", features = ["json"] }
sha2 = "0.11.0"
urlencoding = "2.1.3"

[dev-dependencies]
http-body-util = "0.1"
mime = "0.3"
